@@ -460,7 +460,8 @@ class DrDkTvAddon(object):
             is_helper = Helper('hls')
             if is_helper.check_inputstream():
                 listItem.setProperty('inputstream', is_helper.inputstream_addon)
-                listItem.setProperty('inputstream.adaptive.manifest_type', 'hls')
+                if kodi_version_major() <= 20:
+                    listItem.setProperty('inputstream.adaptive.manifest_type', 'hls')
 
         local_subs_bool = bool_setting('enable.localsubtitles') or int(get_setting('inputstream')) == 1
         if local_subs_bool and video['srt_subtitles']:
